--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
@@ -11,20 +11,22 @@
 		<img src="{{ STATIC_URL }}logo.png" class="logo">
 	</div>
 
-	<div id="center"> <!-- start of main content -->
-		<div class="pure-g">
-			<div class="pure-u-1-3">
-				<p>Thirds</p>
-			</div>
+	<div class="center"> <!-- start of main content -->
+		<div style="width:66%; text-align: center; margin: auto;">
+			<div class="pure-g">
+				<div class="pure-u-1-3">
+					<p>Profile</p>
+				</div>
 
-			<div class="pure-u-1-3">
-				<p>Thirds</p>
-			</div>
+				<div class="pure-u-1-3">
+					<p>Tool</p>
+				</div>
 
-			<div class="pure-u-1-3">
-				<p>Thirds</p>
+				<div class="pure-u-1-3">
+					<p>Search</p>
+				</div>
 			</div>
-	</div>
+		</div>
 
 	</div>
 
