Registration System Complete
Rough version. 
Displays email, first and last name, and username.

Added:
- RegistrationManager
- profile.html
- new menu system
- email info in settings.py

--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/registration/registration_form.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/registration/registration_form.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% comment %}
+	SWEN-261
+	Thomas Heissenberger
+{% endcomment %}
+
 {% load staticfiles %}
 {% load i18n %}
 {% block content %}
