--- a/ toolshare --username trh8614@g.rit.edu/toolshare/static/main.css
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/static/main.css
@@ -26,7 +26,12 @@ div.menu{
 }
 
 div.center{
+	margin-right: auto;
+	margin-left: auto;
 	margin-top: 5%;
+	text-align: center;
+	float: center;
+
 }
 
 b{
