--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/base.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/base.html
@@ -1,3 +1,4 @@
+{# SWEN-261 Thomas Heissenberger #}
 {% load staticfiles %}
 <html>
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css"> <!-- css boilerplate -->
