--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
@@ -1,3 +1,4 @@
+{# SWEN-261 Thomas Heissenberger #}
 {% load staticfiles %}
 <html>
 	<title>toolShare</title>
@@ -6,28 +7,20 @@
 	<div id="top">
 		
 		<div class="menu">
-			{% if user.is_authenticated %} <b>Welcome {{ user.username }}!</b>{% else %} <b>Sign In</b>{% endif %}
+			{% if user.is_authenticated %} 
+				<b style="margin-left: 2em; margin-right: 2em">Welcome {{ user.username }}!</b>
+				<!--- we include a menu here! -->
+
+
+			{% else %} <a href="{{ SITE_URL }}/accounts/registration/">Register</a> or <a href="{{ SITE_URL }}/accounts/login/">Sign-In</a>{% endif %}
 		</div>
 		<img src="{{ STATIC_URL }}logo.png" class="logo">
 	</div>
 
 	<div class="center"> <!-- start of main content -->
-		<div style="width:66%; text-align: center; margin: auto;">
-			<div class="pure-g">
-				<div class="pure-u-1-3">
-					<p>Profile</p>
-				</div>
-
-				<div class="pure-u-1-3">
-					<p>Tool</p>
-				</div>
-
-				<div class="pure-u-1-3">
-					<p>Search</p>
-				</div>
-			</div>
-		</div>
-
+		<a class="pure-button" href="{{ SITE_URL }}/accounts/profile/">Profile</a>
+		<a class="pure-button" href="{{ SITE_URL }}/tools/">Tools</a>
+		<a class="pure-button" href="{{ SITE_URL }}/">Home</a>
 	</div>
 
 
