Semi Final Commit for R1
Database in working condition.
Users can register/login/logout/admin page.
Users can create tools, browse tools. 
- Search function inert.
- Tool details inert.

Plan to refactor models/forms into forms.py
Tools was split into separate app toolmanager which handles
toolmanager/views.py, a dependency for toolshare/urls.py

Rough testing shows in working condition.

CSS slightly sloppy but basic and simple.

--- a/ toolshare --username trh8614@g.rit.edu/toolshare/static/main.css
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/static/main.css
@@ -31,6 +31,14 @@ div.center{
 	margin-top: 5%;
 	text-align: center;
 	float: center;
+}
+
+
+div.list{
+	width: 400px;
+	text-align: left;
+	margin: 0 auto;
+	margin-top: 2em;
 
 }
 
@@ -38,3 +46,4 @@ b{
 	font-family: 'Tahoma';
 	color: white;
 }
+
