--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
@@ -19,6 +19,7 @@
 
 	<div class="center"> <!-- start of main content -->
 		<a class="pure-button" href="{{ SITE_URL }}/accounts/profile/">Profile</a>
+		<a class="pure-button" href="{{ SITE_URL }}/accounts/logout/">Log Out</a>
 		<a class="pure-button" href="{{ SITE_URL }}/tools/">Tools</a>
 		<a class="pure-button" href="{{ SITE_URL }}/">Home</a>
 	</div>
