--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/profile.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/profile.html
@@ -18,6 +18,7 @@
 				<b style="margin-left: 2em; margin-right: 2em">Welcome {{ user.username }}!</b>
 				<!--- we include a menu here! -->
 				<a class="pure-button" href="{{ SITE_URL }}/accounts/profile/">Profile</a>
+				<a class="pure-button" href="{{ SITE_URL }}/accounts/logout/">Log Out</a>
 				<a class="pure-button" href="{{ SITE_URL }}/tools/">Tools</a>
 				<a class="pure-button" href="{{ SITE_URL }}/">Home</a>
 
