--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/browse.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/browse.html
@@ -15,7 +15,6 @@
 				<a class="pure-button" href="{{ SITE_URL }}/tools/">Tools</a>
 				<a class="pure-button" href="{{ SITE_URL }}/">Home</a>
 
-
 			{% else %} <a href="{{ SITE_URL }}/accounts/registration/">Register</a> or <a href="{{ SITE_URL }}/accounts/login/">Sign-In</a>{% endif %}
 		</div>
 		<img src="{{ STATIC_URL }}logo.png" class="logo">
@@ -26,7 +25,35 @@
 		<a class="pure-button" href="{{ SITE_URL }}/tools/browse/" style="margin-left: 2em; margin-right: 2em;">Browse</a>
 		<a class="pure-button" href="{{ SITE_URL }}/tools/add/" style="margin-left: 2em; margin-right: 2em;">Add</a>
 		<a class="pure-button" href="{{ SITE_URL }}/tools/search/" style="margin-left: 2em; margin-right: 2em;">Search</a>
+
+		<div class="list">
+		
+			<table class="pure-table pure-table-horizontal">
+				<thead>
+					<tr>
+						<th>Tool</th>
+						<th>Manufacture</th>
+						<th>Location</th>
+						<th>Quantity</th>
+					</tr>
+				</thead>
+
+				<tbody>
+					{% for tool in tool_list %}
+						<tr>
+							<td>{{ tool.tool_name }}</td>
+							<td>{{ tool.tool_manufacture }}</td>
+							<td>{{ tool.location }}</td>
+							<td><b style="color: blue">{{ tool.quantity_available }}</b>/<b style="color: green">{{ tool.quantity }}</b></td>
+						</tr>
+					{% endfor %}
+
+				</tbody>
+			</table>
+		</div>
 	</div>
+
+
 
 
 </html>
