Light Debugging Complete.
First Initial Debugging phase underway

Fix'd:
- login register link doing a double redirection
- overhaul'd registration return home link. 
- sign out button added.
- deleted toolshare/templates/tools/base.html (not needed)

--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/registration/login.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/registration/login.html
@@ -20,7 +20,7 @@
 			<input type="hidden" name="next" value="{{ next }}" />
 		</form>
 
-		<p>Not a member? <a href="{{ SITE_URL }}accounts/register">Register</a>!</p>
+		<p>Not a member? <a href="{{ SITE_URL }}/accounts/register">Register</a>!</p>
 
 	</div>
 {% endblock %}
