--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/registration/logout.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/registration/logout.html
@@ -11,5 +11,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="/static/regi.css">
 	<title>toolShare - Logout</title>
-	<p>Logged Out.</p>
+	<p>Logged Out</p>
+
+	<a style="text-align: center;" class="pure-button" href="{{ SITE_URL }}/">Return Home</a>
 {% endblock %}
