--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/registration/registration_complete.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/registration/registration_complete.html
@@ -11,5 +11,6 @@
 	<title>toolShare - Registration</title>
 	<div class="center">
 		<h1 style="text-align:center;">Activation Email Sent!</h1>
+		<a style="text-align: center;" class="pure-button" href="{{ SITE_URL }}/">Return Home</a>
 	</div>
 {% endblock %}
