--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/registration/registration_form.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/registration/registration_form.html
@@ -17,7 +17,7 @@
 
 		
 
-		<form class="pure-form pure-form-aligned" method="post" action=".">
+		<form class="pure-form pure-form-stacked" method="post" action=".">
 			{% csrf_token %}
 			{{ form.as_p }}
 
