--- a/ toolshare --username trh8614@g.rit.edu/toolshare/static/regi.css
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/static/regi.css
@@ -11,9 +11,9 @@ body{
 }
 
 div.center{
-	width: 33%;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 auto;
+	width: 10%;
+	text-align: center;
 }
 
 p {
