--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
@@ -12,7 +12,7 @@
 				<!--- we include a menu here! -->
 
 
-			{% else %} <a href="{{ SITE_URL }}/accounts/registration/">Register</a> or <a href="{{ SITE_URL }}/accounts/login/">Sign-In</a>{% endif %}
+			{% else %} <a href="{{ SITE_URL }}/accounts/register/">Register</a> or <a href="{{ SITE_URL }}/accounts/login/">Sign-In</a>{% endif %}
 		</div>
 		<img src="{{ STATIC_URL }}logo.png" class="logo">
 	</div>
