--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/index.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/index.html
@@ -16,7 +16,7 @@
 				<a class="pure-button" href="{{ SITE_URL }}/">Home</a>
 
 
-			{% else %} <a href="{{ SITE_URL }}/accounts/registration/">Register</a> or <a href="{{ SITE_URL }}/accounts/login/">Sign-In</a>{% endif %}
+			{% else %} <a href="{{ SITE_URL }}/accounts/register/">Register</a> or <a href="{{ SITE_URL }}/accounts/login/">Sign-In</a>{% endif %}
 		</div>
 		<img src="{{ STATIC_URL }}logo.png" class="logo">
 	</div>
