--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/add.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/add.html
@@ -58,7 +58,7 @@
 						}
 
 					</style>
-					<button type="submit" class="button-success pure-button">Success Button</button>
+					<button type="submit" class="button-success pure-button">Submit</button>
 
 				</fieldset>
 			</form>
