--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
@@ -18,8 +18,9 @@
 	</div>
 
 	<div class="center"> <!-- start of main content -->
+		{% if user.is_authenticated %} 
 		<a class="pure-button" href="{{ SITE_URL }}/accounts/profile/">Profile</a>
-		<a class="pure-button" href="{{ SITE_URL }}/accounts/logout/">Log Out</a>
+		<a class="pure-button" href="{{ SITE_URL }}/accounts/logout/">Log Out</a>{% endif %}
 		<a class="pure-button" href="{{ SITE_URL }}/tools/">Tools</a>
 		<a class="pure-button" href="{{ SITE_URL }}/">Home</a>
 	</div>
