--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/index.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/index.html
@@ -18,14 +18,15 @@
 
 			{% else %} <a href="{{ SITE_URL }}/accounts/register/">Register</a> or <a href="{{ SITE_URL }}/accounts/login/">Sign-In</a>{% endif %}
 		</div>
-		<img src="{{ STATIC_URL }}logo.png" class="logo">
+		<a href="\"><img src="{{ STATIC_URL }}logo.png" class="logo"></a>
 	</div>
 	<h2 style="text-align: center; color: black;">Tools</h2>
 	<hr>
 	<div class="center"> <!-- start of main content -->
-		<a class="pure-button" href="{{ SITE_URL }}/tools/browse/" style="margin-left: 2em; margin-right: 2em;">Browse</a>
-		<a class="pure-button" href="{{ SITE_URL }}/tools/add/" style="margin-left: 2em; margin-right: 2em;">Add</a>
-		<a class="pure-button" href="{{ SITE_URL }}/tools/search/" style="margin-left: 2em; margin-right: 2em;">Search</a>
+		{% if user.is_authenticated %} 
+			<a class="pure-button" href="{{ SITE_URL }}/tools/browse/" style="margin-left: 2em; margin-right: 2em;">Browse</a>
+			<a class="pure-button" href="{{ SITE_URL }}/tools/add/" style="margin-left: 2em; margin-right: 2em;">Add</a>
+			<a class="pure-button" href="{{ SITE_URL }}/tools/search/" style="margin-left: 2em; margin-right: 2em;">Search</a>{% endif %}
 	</div>
 
 
