--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/base.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/base.html
@@ -3,7 +3,7 @@
 <html>
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css"> <!-- css boilerplate -->
 	<div id="top">
-		<a href="{{ SITE_URL }}"><img src="{{ STATIC_URL }}logo.png" class="logo"></a>
+		<a href="\"><img src="{{ STATIC_URL }}logo.png" class="logo"></a>
 	</div>
 	{% block content %}{% endblock %}
 
