--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
@@ -14,7 +14,7 @@
 
 			{% else %} <a href="{{ SITE_URL }}/accounts/register/">Register</a> or <a href="{{ SITE_URL }}/accounts/login/">Sign-In</a>{% endif %}
 		</div>
-		<a href="{{ SITE_URL }}"><img src="{{ STATIC_URL }}logo.png" class="logo"></a>
+		<a href="\"><img src="{{ STATIC_URL }}logo.png" class="logo"></a>
 	</div>
 
 	<div>
