--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/add.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/add.html
@@ -17,7 +17,7 @@
 
 			{% else %} <a href="{{ SITE_URL }}/accounts/register/">Register</a> or <a href="{{ SITE_URL }}/accounts/login/">Sign-In</a>{% endif %}
 		</div>
-		<img src="{{ STATIC_URL }}logo.png" class="logo">
+		<a href="\"><img src="{{ STATIC_URL }}logo.png" class="logo"></a>
 	</div>
 	<h2 style="text-align: center; color: black;">Tools</h2>
 	<hr>
