Fixed the logo.

--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
@@ -17,8 +17,8 @@
 		<a href="\"><img src="{{ STATIC_URL }}logo.png" class="logo"></a>
 	</div>
 
-	<div>
-		<img src="{{ STATIC_URL }}transparent.jpg" style="position: center;">
+	<div class="center">
+		<img src="{{ STATIC_URL }}transparent.png">
 	</div>
 
 	<div class="center"> <!-- start of main content -->
