Addition of rigged out tool sharing system. Checkout system in Alpha.
Testing in detail.

--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/notice.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/notice.html
@@ -10,8 +10,8 @@
 	
 	<link rel="stylesheet" type="text/css" href="/static/regi.css">
 	<title>toolShare - Registration</title>
-	<div class="center">
-		<h1 style="text-align:center;">Activation Completed!</h1>
+	<div class="center" style="width: 50%;">
+		<h1 style="text-align:center;">{{ error }}</h1>
 		<a href="/" style="text-align: center;display: block; margin: 0 auto;">Return Home</a>
 	</div>
 
