--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/registration/logout.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/registration/logout.html
@@ -13,5 +13,5 @@
 	<title>toolShare - Logout</title>
 	<p>Logged Out</p>
 
-	<a style="text-align: center;" class="pure-button" href="{{ SITE_URL }}/">Return Home</a>
+	<a style="margin-left:50%; margin-right:50%; left: 45%" class="pure-button" href="{{ SITE_URL }}/">Return Home</a>
 {% endblock %}
