--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/profile.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/profile.html
@@ -48,6 +48,26 @@
 				</tr>
 			</tbody>
 		</table>
+		<br>
+		<br>
+		<br>
+		<table class="pure-table" style="margin-left: auto; margin-right: auto; width: 60%">
+			<thead>
+				<tr>
+					<th>Tool</th>
+					<th>Picture</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				{% for tool in tool_list %}
+					<tr>
+						<td>{{ tool.tool_name }}</td>
+						<td><img src="{{ STATIC_URL }}tool_pics/{{ tool.tool_name|slugify}}.png"></td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
 	</div>
 
 {% endblock %}
