--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/browse.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/browse.html
@@ -26,9 +26,9 @@
 		<a class="pure-button" href="{{ SITE_URL }}/tools/add/" style="margin-left: 2em; margin-right: 2em;">Add</a>
 		<a class="pure-button" href="{{ SITE_URL }}/tools/search/" style="margin-left: 2em; margin-right: 2em;">Search</a>
 
-		<div class="list"> 
+		<div class="list" style="width: 100%;"> 
 		
-			<table class="pure-table pure-table-horizontal">
+			<table class="pure-table pure-table-horizontal" style="margin-left: 20%; margin-right: 20%;">
 				<thead>
 					<tr>
 						<th>Tool</th>
@@ -37,18 +37,20 @@
 						<th>Quantity Avalible</th>
 						<th>Add Item</th>
 						<th>Subtract Item</th>
+						<th></th>
 					</tr>
 				</thead>
 
 				<tbody>
 					{% for tool in tool_list %}
 						<tr>
-							<td>{{ tool.tool_name }} <img src="{{ STATIC_URL }}/tool_pics/{{ tool.tool_name|slujgify}}"></td>
+							<td>{{ tool.tool_name }} <img src="{{ STATIC_URL }}tool_pics/{{ tool.tool_name|slugify}}.png"></td>
 							<td>{{ tool.tool_manufacture }}</td>
 							<td>{{ tool.location }}</td>
 							<td><b style="color: blue">{{ tool.quantity_available }}</b>/<b style="color: green">{{ tool.quantity }}</b></td>
 							<td><a class="pure-button" href="{{ tool.addquant }}">+</a></td>
 							<td><a class="pure-button" href="{{ tool.subquant }}">-</a></td>
+							<td><a class="pure-button" href="{{ SITE_URL }}/tools/checkout/{{tool.tool_name|slugify}}/">Checkout!</a></td>
 						</tr>
 					{% endfor %}
 
