--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/error.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/error.html
@@ -3,7 +3,7 @@
 	SWEN-261
 	Thomas Heissenberger
 
-	Activation page! Requires key!
+	A simple error page to alert and notify users of issues.
 {% endcomment %}
 {% load staticfiles %}
 {% block content %}
@@ -11,7 +11,8 @@
 	<link rel="stylesheet" type="text/css" href="/static/regi.css">
 	<title>toolShare - Registration</title>
 	<div class="center" style="width: 50%;">
-		<h1 style="text-align:center;">Error! <br><br> {{ error }}</h1>
+		<h1 style="text-align:center;  color: darkred;">Error!</h1> 
+		<h1>{{ error }}</h1>
 		<a href="/" style="text-align: center;display: block; margin: 0 auto;">Return Home</a>
 	</div>
 
