--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/profile.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/profile.html
@@ -37,6 +37,7 @@
 					<th>First Name</th>
 					<th>Last Name</th>
 					<th>Email</th>
+					<th>Zipcode</th>
 				</tr>
 			</thead>
 
@@ -46,6 +47,7 @@
 					<td>{{ user.first_name }}</td>
 					<td>{{ user.last_name }}</td>
 					<td>{{ user.email }}</td>
+					<td style="color: darkred; font-style: bold;">{{ user.extendedprofile.zipcode }}</td>
 				</tr>
 			</tbody>
 		</table>
