--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/browse.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/browse.html
@@ -35,7 +35,7 @@
 						<th>Tool</th>
 						<th>Manufacture</th>
 						<th>Location</th>
-						<th>Quantity Avalible</th>
+						<th>Quantity Available</th>
 						<th>Add Item</th>
 						<th>Subtract Item</th>
 						<th></th>
