--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/base.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/base.html
@@ -1,7 +1,8 @@
 {# SWEN-261 Thomas Heissenberger #}
 {% load staticfiles %}
 <html>
-	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css"> <!-- css boilerplate -->
+	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
+
 	<div id="top">
 		<a href="\"><img src="{{ STATIC_URL }}logo.png" class="logo"></a>
 	</div>
