--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/browse.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/browse.html
@@ -54,8 +54,8 @@
 							<td>{{ tool.tool_manufacture }}</td>
 							<td>{{ tool.location }}</td>
 							<td>{{ tool.tool_name|colorfy|safe }}</td>
-							<td><a class="pure-button" href="{{ tool.addquant }}">+</a></td>
-							<td><a class="pure-button" href="{{ tool.subquant }}">-</a></td>
+							<td><a class="pure-button" href="{{ SITE_URL }}/tools/addone/{{tool.tool_name|slugify}}/">+</a></td>
+							<td><a class="pure-button" href="{{ SITE_URL }}/tools/minusone/{{tool.tool_name|slugify}}/">-</a></td>
 							<td><a class="pure-button" href="{{ SITE_URL }}/tools/checkout/{{tool.tool_name|slugify}}/">Checkout!</a></td>
 							<td>{% if tool.canReturn %}<a class="pure-button" href="{{ SITE_URL }}/tools/return/{{tool.tool_name|slugify}}/">Return!</a> {% endif %}</td>
 						</tr>
