Request system in heavy process. Likely to meet deadline.

--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/index.html
@@ -27,6 +27,7 @@
 		<a class="pure-button" href="{{ SITE_URL }}/accounts/logout/">Log Out</a>{% endif %}
 		<a class="pure-button" href="{{ SITE_URL }}/tools/">Tools</a>
 		<a class="pure-button" href="{{ SITE_URL }}/">Home</a>
+		<a class="pure-button pure-button-primary" href="{{ SITE_URL }}/notices/">({{user.extendedprofile.stacksize}}) Notifications</a>
 	</div>
 
 
