--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/process.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/process.html
@@ -9,10 +9,13 @@
 {% block content %}
 	
 	<link rel="stylesheet" type="text/css" href="/static/regi.css">
-	<title>toolShare - Registration</title>
+	<title>toolShare - Notification</title>
 	<div class="center" style="width: 50%;">
-		<h1 style="text-align:center; color: green;">{{ notice }}</h1>
-
+		<h1 style="text-align:center; color: green;">Success!</h1> 
+		<h1 style="text-align:center; color: black;"> Your {{ transactiontype }} has been processed.</h1> 
+		<br>
+		<h3 style="text-align:center;">Wait till the other party confirms the transaction.</h3>
+		<br>
 		<a href="/" style="text-align: center;display: block; margin: 0 auto;">Return Home</a>
 	</div>
 
