75% working request system. Grinding out bugs.

--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/process.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/process.html
@@ -15,6 +15,7 @@
 		<h1 style="text-align:center; color: black;"> Your {{ transactiontype }} has been processed.</h1> 
 		<br>
 		<h3 style="text-align:center;">Wait till the other party confirms the transaction.</h3>
+		<h3 style="text-align:center;">{{extra}}</h3>
 		<br>
 		<a href="/" style="text-align: center;display: block; margin: 0 auto;">Return Home</a>
 	</div>
