--- a/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/tool.html
+++ b/ toolshare --username trh8614@g.rit.edu/toolshare/templates/tools/tool.html
@@ -17,6 +17,7 @@
 				<a class="pure-button" href="{{ SITE_URL }}/accounts/logout/">Log Out</a>
 				<a class="pure-button" href="{{ SITE_URL }}/tools/">Tools</a>
 				<a class="pure-button" href="{{ SITE_URL }}/">Home</a>
+				<a class="pure-button pure-button-primary" href="{{ SITE_URL }}/notices/">({{user.extendedprofile.stacksize}}) Notifications</a>
 
 			{% else %} 
 				<a href="{{ SITE_URL }}/accounts/register/">Register</a> or <a href="{{ SITE_URL }}/accounts/login/">Sign-In</a>
